[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://audio/Blip_Select.wav" type="AudioStream" id=2]

[node name="StartMenu" type="Control"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 266.0
margin_top = 67.0
margin_right = 327.0
margin_bottom = 81.0
rect_scale = Vector2( 8, 8 )
text = "Power Up"

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
margin_left = 288.0
margin_top = 401.0
margin_right = 507.0
margin_bottom = 446.0
rect_scale = Vector2( 2, 2 )

[node name="StartButton" type="Button" parent="ButtonsContainer"]
margin_right = 219.0
margin_bottom = 20.0
text = "Start"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
margin_top = 24.0
margin_right = 219.0
margin_bottom = 44.0
text = "Quit"

[node name="Label" type="Label" parent="."]
margin_left = 303.0
margin_top = 243.0
margin_right = 506.0
margin_bottom = 274.0
rect_scale = Vector2( 2, 2 )
text = "Ludum Dare 51 Game Jam Entry
by Sam and Noah Bumgardner"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="focus_entered" from="ButtonsContainer/StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="ButtonsContainer/QuitButton" to="." method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
